--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,11 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: Jones_Mac
-  password: 123456
+  host: <%= ENV['POSTGRES_HOST'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  # username: Jones_Mac
+  # password: 123456
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
